# databrew_lab_hackthon

./: .gitignore  Dockerfile  QUICKSTART.md  README.md  analysis_key_double_agent.md  analysis_key_holmes.md  analysis_key_lovers.md  body language analysis.md  deploy.sh  docker-compose.yml  emotion_analysis_20min_lie.json  emotion_analysis_double_agent.json  emotion_analysis_holmes.json  emotion_analysis_love_story.json  emotion_analysis_office_lovers.json  emotion_db.sqlite  expression.json  interviewtranscripts.json  pyproject.toml  pytest.ini  requirements.txt  transcription_20min_lie.json  transcription_double_agent.json  transcription_holmes.json  transcription_love_story.json  transcription_office_lovers.json
docs/: 01_SCHEMA_SPECIFICATION.md  02_API_SPECIFICATION.md  03_ARCHITECTURE.md  04_AGENT_DESIGN.md  05_TEMPORAL_ALIGNMENT.md  06_OBSERVABILITY.md  07_DATA_FLOW.md  08_DEPLOYMENT.md  09_IMPLEMENTATION_GUIDE.md  10_EXAMPLES_EXPLAINED.md  API_DOCUMENTATION.md  ARCHITECTURE_REDESIGN.md  DEPLOYMENT_GUIDE.md  README.md  USER_GUIDE.md
examples/: analysis_key_20min_lie  analysis_key_double_agent.md  analysis_key_emotion_lie.md  analysis_key_holmes.md  analysis_key_love_story.md  analysis_key_lovers.md  emotion_analysis_20min_lie.json  emotion_analysis_double_agent.json  emotion_analysis_holmes.json  emotion_analysis_love_story.json  emotion_analysis_office_lovers.json  expression.json  interviewtranscripts.json  transcription_20min_lie.json  transcription_double_agent.json  transcription_holmes.json  transcription_love_story.json  transcription_office_lovers.json
(+44 files in other folders)
